// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile /> mounts correctly 1`] = `
<div>
  <ToastContainer
    autoClose={4000}
    bodyClassName={null}
    className={null}
    closeButton={
      <CloseButton
        ariaLabel="close"
      />
    }
    closeOnClick={true}
    draggable={true}
    draggablePercent={80}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnFocusLoss={true}
    pauseOnHover={true}
    position="top-right"
    progressClassName={null}
    progressStyle={null}
    rtl={false}
    style={null}
    toastClassName={null}
    transition={[Function]}
  />
  <div
    className="profile-container"
  >
    <Dimmer
      active={true}
    >
      <Loader />
    </Dimmer>
    <ProfileSidebar
      bio="I am the correct user"
      currentView="default"
      email="dummy@user.com"
      firstName="mr"
      followAuthorHandler={[Function]}
      followers={Array []}
      followings={Array []}
      getButtonText={[Function]}
      image="https://dummyimage.com"
      lastName="user"
      username="dummyuser"
    />
    <ProfileMain
      bio="I am the correct user"
      currentView="default"
      deleteArticle={[MockFunction]}
      email="dummy@user.com"
      firstName="mr"
      image="https://dummyimage.com"
      isDeleting={false}
      lastName="user"
      publications={Array []}
      username="dummyuser"
      view={[Function]}
    />
  </div>
</div>
`;

exports[`<Profile /> mounts correctly without image 1`] = `
<div>
  <ToastContainer
    autoClose={4000}
    bodyClassName={null}
    className={null}
    closeButton={
      <CloseButton
        ariaLabel="close"
      />
    }
    closeOnClick={true}
    draggable={true}
    draggablePercent={80}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnFocusLoss={true}
    pauseOnHover={true}
    position="top-right"
    progressClassName={null}
    progressStyle={null}
    rtl={false}
    style={null}
    toastClassName={null}
    transition={[Function]}
  />
  <div
    className="profile-container"
  >
    <Dimmer
      active={true}
    >
      <Loader />
    </Dimmer>
    <ProfileSidebar
      bio="I am the correct user"
      currentView="default"
      email="dummy@user.com"
      firstName="mr"
      followAuthorHandler={[Function]}
      followers={Array []}
      followings={Array []}
      getButtonText={[Function]}
      image=""
      lastName="user"
      username="dummyuser"
    />
    <ProfileMain
      bio="I am the correct user"
      currentView="default"
      deleteArticle={[MockFunction]}
      email="dummy@user.com"
      firstName="mr"
      image=""
      isDeleting={false}
      lastName="user"
      publications={Array []}
      username="dummyuser"
      view={[Function]}
    />
  </div>
</div>
`;
